<resources>
    <string name="app_name">Hover - Hello World</string>
    <string name="title_simple_examples">Simple Examples</string>
    <string name="description_simple_examples">The following examples show the simplest Hover menus possible.  These examples use simple tab Views and only display text in their content screens.</string>
    <string name="title_dynamic_examples">Dynamic Examples</string>
    <string name="description_dynamic_examples">The following examples also use simple menus, but these menus change in a scripted fashion.  These demos illustrate what happens to Hover when various things in the menu change at runtime.</string>
    <string name="button_launch_hover_single_section">Launch Hover!</string>
    <string name="button_launch_hover_multi_sections">Launch Multiple Sections</string>
    <string name="button_launch_hover_foreground">Launch Hover in Foreground</string>
    <string name="button_launch_hover_changing_sections">Launch Changing Sections</string>
    <string name="button_launch_hover_reordering_sections">Launch Re-Ordering Sections</string>
    <string name="button_launch_hover_all_states">Launch All States Menu</string>
    <string name="button_launch_hover_changing_menus">Launch Changing Menus</string>
    <string name="button_launch_hover_menu_then_no_menu">Launch Menu, Then No Menu</string>
</resources>
