<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/activity_main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="io.mattcarroll.hover.hoverdemo.helloworld.MainActivity"
    >

    <TextView
        android:id="@+id/textview_intro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/introduction"
        />

    <Button
        android:id="@+id/button_launch_hover_single_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview_intro"
        android:layout_marginTop="16dp"
        android:text="@string/button_launch_hover_single_section"
        />

    <Button
        android:id="@+id/button_launch_hover_multi_sections"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_launch_hover_single_section"
        android:layout_marginTop="16dp"
        android:text="@string/button_launch_hover_multi_sections"
        />

    <Button
        android:id="@+id/button_launch_hover_changing_sections"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_launch_hover_multi_sections"
        android:layout_marginTop="16dp"
        android:text="@string/button_launch_hover_changing_sections"
        />

    <Button
        android:id="@+id/button_launch_hover_reordering_sections"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_launch_hover_changing_sections"
        android:layout_marginTop="16dp"
        android:text="@string/button_launch_hover_reordering_sections"
        />

    <Button
        android:id="@+id/button_launch_hover_all_states"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_launch_hover_reordering_sections"
        android:layout_marginTop="16dp"
        android:text="@string/button_launch_hover_all_states"
        />

</RelativeLayout>
